--- a/app/src/main/res/layout/content_select_user.xml
+++ b/app/src/main/res/layout/content_select_user.xml
@@ -25,6 +25,7 @@
         android:scaleType="centerInside"
         android:id="@+id/refugee_signup_button"
         android:src="@drawable/refugee"
+        android:layout_below="@+id/TEXT"
         android:layout_alignParentStart="true" />
 
 
