--- a/app/src/main/res/layout/matches_tab.xml
+++ b/app/src/main/res/layout/matches_tab.xml
@@ -5,7 +5,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tab_title"
+        android:text="Matches"
         android:textSize="40dp"
         android:textStyle="bold"
         android:layout_centerInParent="true"/>
