--- a/app/src/main/res/layout/needs_tab.xml
+++ b/app/src/main/res/layout/needs_tab.xml
@@ -2,12 +2,60 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/tab_title"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"/>
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/tab_title"-->
+        <!--android:textSize="40dp"-->
+        <!--android:textStyle="bold"-->
+        <!--android:layout_centerInParent="true"/>-->
+
+    <ImageView
+        android:id="@+id/housing_button"
+        android:src="@drawable/housing"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+
+        android:layout_below="@+id/food_button"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"/>
+    <ImageView
+        android:id="@+id/food_button"
+        android:src="@drawable/food"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        />
+
+    <ImageView
+        android:id="@+id/clothes_button"
+        android:src="@drawable/clothes"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_below="@+id/housing_button" />
+
+    <ImageView
+        android:id="@+id/money_button"
+        android:src="@drawable/money"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/food_button"/>
+
+    <ImageView
+        android:id="@+id/medical_button"
+        android:src="@drawable/health"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_below="@+id/clothes_button"/>
+
+    <ImageView
+        android:id="@+id/education_button"
+        android:src="@drawable/education"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/money_button"/>
 
 </RelativeLayout>
