--- a/app/src/main/res/layout/local_tab.xml
+++ b/app/src/main/res/layout/local_tab.xml
@@ -4,5 +4,9 @@
         class="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/map"/>
 
 </RelativeLayout>
