--- a/app/src/main/res/layout/matches_tab.xml
+++ b/app/src/main/res/layout/matches_tab.xml
@@ -1,13 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:id="@+id/MATCHES">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Matches"
+        android:text="MATCHES FOUND "
         android:textSize="40dp"
         android:textStyle="bold"
-        android:layout_centerInParent="true"/>
+        android:id="@+id/textView10"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/textView9"
+        android:layout_marginTop="49dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Donors in your range "
+        android:textSize="35dp"
+        android:id="@+id/textView9"
+        android:layout_below="@+id/textView10"
+        android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView7"
+        android:src="@drawable/match"
+        android:layout_alignTop="@+id/textView10"
+        android:layout_alignStart="@+id/textView10" />
 
 </RelativeLayout>
