--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6374d4</color>
+    <color name="colorPrimary">#8799fa</color>
     <color name="colorPrimaryDark">#4c5dc9</color>
-    <color name="colorAccent">#fa28b8</color>
+    <color name="colorAccent">#147bfa</color>
     <color name="blue">#FF2020DD</color>
     <color name="transparent_blue">#AA2020DD</color>
     <color name="transparent_orange">#BBDD6020</color>
-    <color name="textColorPrimary">#FFFFFF</color>
+    <color name="textColorPrimary">#d70202</color>
     <color name="textColorSecondary">#DDDDDD</color>
     <color name="windowBackground">#FFFFFF</color>
     <color name="navigationBarColor">#000000</color>
+    <color name="black">#FF000000</color>
 
 </resources>
