--- a/app/src/main/res/layout/matches_tab.xml
+++ b/app/src/main/res/layout/matches_tab.xml
@@ -11,24 +11,15 @@
         android:textStyle="bold"
         android:id="@+id/textView10"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/textView9"
-        android:layout_marginTop="49dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Donors in your range "
-        android:textSize="35dp"
-        android:id="@+id/textView9"
-        android:layout_below="@+id/textView10"
         android:layout_centerHorizontal="true" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView7"
-        android:src="@drawable/match"
-        android:layout_alignTop="@+id/textView10"
-        android:layout_alignStart="@+id/textView10" />
+        android:src="@drawable/mappp"
+        android:layout_marginBottom="-25dp"
+        android:layout_below="@+id/textView10"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
