--- a/app/src/main/res/layout/content_refugee__profile.xml
+++ b/app/src/main/res/layout/content_refugee__profile.xml
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:id="@+id/frameLayout">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -148,15 +149,7 @@
                         android:text="SUBMIT"
                         android:id="@+id/button"
                         android:layout_below="@+id/checkBox7"
-                        android:layout_toStartOf="@+id/checkBox7" />
-
-                    <ImageButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/imageButton"
-                        android:src="@drawable/heart"
-                        android:layout_alignTop="@+id/button"
-                        android:layout_toStartOf="@+id/button" />
+                        android:layout_centerHorizontal="true" />
 
                 </RelativeLayout>
 
@@ -181,5 +174,14 @@
 
         </RelativeLayout>
     </FrameLayout>
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Switch"
+        android:id="@+id/switch1"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/frameLayout"
+        android:layout_marginEnd="232dp" />
 
 </RelativeLayout>
