--- a/app/src/main/res/layout/content_donor__sign_up.xml
+++ b/app/src/main/res/layout/content_donor__sign_up.xml
@@ -18,11 +18,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
+        android:paddingBottom="100dp"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
@@ -69,83 +66,88 @@
                         android:layout_alignParentTop="true"
                         android:layout_alignEnd="@+id/editText3" />
 
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_alignParentBottom="true"
+                        android:text="SUBMIT"
+                        android:id="@+id/button_submit" />
+                    <ImageButton
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:id="@+id/imageButton2"
+                        android:src="@drawable/heart"
+                        android:layout_alignTop="@+id/button_submit"
+                        android:layout_toStartOf="@+id/button_submit" />
+
+
                     <RelativeLayout
+                        android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_below="@+id/textView5"
                         android:layout_alignEnd="@+id/textView5" >
 
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="SUBMIT"
-                            android:id="@+id/button2"
-                            android:layout_below="@+id/checkBox12"
-                            android:layout_toStartOf="@+id/checkBox12" />
 
-                        <CheckBox
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="CLOTHES"
-                            android:id="@+id/checkBox3"
-                            android:checked="false"
-                            android:layout_alignParentTop="true"
-                            android:layout_alignParentStart="true" />
 
-                        <CheckBox
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="HEALTH"
-                            android:id="@+id/checkBox8"
-                            android:checked="false"
-                            android:layout_alignParentTop="true"
-                            android:layout_alignStart="@+id/checkBox9" />
+                        <!--<CheckBox-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:text="CLOTHES"-->
+                            <!--android:id="@+id/checkBox3"-->
+                            <!--android:checked="false"-->
+                            <!--android:layout_alignParentTop="true"-->
+                            <!--android:layout_alignParentStart="true" />-->
 
-                        <CheckBox
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="EDUCATION"
-                            android:id="@+id/checkBox9"
-                            android:checked="false"
-                            android:layout_below="@+id/checkBox8"
-                            android:layout_alignParentEnd="true" />
+                        <!--<CheckBox-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:text="HEALTH"-->
+                            <!--android:id="@+id/checkBox8"-->
+                            <!--android:checked="false"-->
+                            <!--android:layout_alignParentTop="true"-->
+                            <!--android:layout_alignStart="@+id/checkBox9" />-->
 
-                        <CheckBox
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="FOODS"
-                            android:id="@+id/checkBox10"
-                            android:checked="false"
-                            android:layout_below="@+id/checkBox8"
-                            android:layout_alignStart="@+id/checkBox3" />
+                        <!--<CheckBox-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:text="EDUCATION"-->
+                            <!--android:id="@+id/checkBox9"-->
+                            <!--android:checked="false"-->
+                            <!--android:layout_below="@+id/checkBox8"-->
+                            <!--android:layout_alignParentEnd="true" />-->
 
-                        <CheckBox
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="MONEY "
-                            android:id="@+id/checkBox11"
-                            android:checked="false"
-                            android:layout_below="@+id/checkBox9" />
+                        <!--<CheckBox-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:text="FOODS"-->
+                            <!--android:id="@+id/checkBox10"-->
+                            <!--android:checked="false"-->
+                            <!--android:layout_below="@+id/checkBox8"-->
+                            <!--android:layout_alignStart="@+id/checkBox3" />-->
 
-                        <CheckBox
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="HOUSING"
-                            android:id="@+id/checkBox12"
-                            android:checked="false"
-                            android:layout_below="@+id/checkBox9"
-                            android:layout_alignStart="@+id/checkBox9" />
+                        <!--<CheckBox-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:text="MONEY "-->
+                            <!--android:id="@+id/checkBox11"-->
+                            <!--android:checked="false"-->
+                            <!--android:layout_below="@+id/checkBox9" />-->
 
-                        <ImageButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/imageButton2"
-                            android:src="@drawable/heart"
-                            android:layout_alignTop="@+id/button2"
-                            android:layout_toStartOf="@+id/button2" />
+                        <!--<CheckBox-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:text="HOUSING"-->
+                            <!--android:id="@+id/checkBox12"-->
+                            <!--android:checked="false"-->
+                            <!--android:layout_below="@+id/checkBox9"-->
+                            <!--android:layout_alignStart="@+id/checkBox9" />-->
+
                     </RelativeLayout>
 
                     <TextView
+                        android:visibility="invisible"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Please fill out the following this to give:"
