--- a/app/src/main/res/layout/content_select_user.xml
+++ b/app/src/main/res/layout/content_select_user.xml
@@ -24,7 +24,7 @@
         android:layout_height="100dp"
         android:scaleType="centerInside"
         android:id="@+id/refugee_signup_button"
-        android:src="@drawable/refg"
+        android:src="@drawable/refugee_signup"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
 
@@ -33,8 +33,9 @@
         android:layout_height="100dp"
         android:scaleType="centerInside"
         android:id="@+id/donor_signup_button"
-        android:src="@drawable/dono"
+        android:src="@drawable/donor_signup"
         android:layout_below="@+id/refugee_signup_button"
+        android:layout_marginTop="10dp"
         android:layout_alignParentEnd="true" />
 
 
