--- a/app/src/main/res/layout/connect_tab.xml
+++ b/app/src/main/res/layout/connect_tab.xml
@@ -9,9 +9,7 @@
             android:layout_height="match_parent"
             android:id="@+id/list_view"
             android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="50dp"/>
+            android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
