--- a/app/src/main/res/layout/local_tab.xml
+++ b/app/src/main/res/layout/local_tab.xml
@@ -5,6 +5,18 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/map"/>
+        android:src="@drawable/map"
+        android:layout_below="@+id/textView9"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LOCAL SAFE PLACES"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:id="@+id/textView9"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
