Synchronize refugee sign in with donor

--- a/app/src/main/res/layout/content_refugee__profile.xml
+++ b/app/src/main/res/layout/content_refugee__profile.xml
@@ -29,14 +29,14 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Please fill out the following needs:"
-                    android:textSize="40dp"
-                    android:id="@+id/textView2"
-                    android:layout_below="@+id/textView4"
-                    android:layout_alignEnd="@+id/textView3" />
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Create a username::"-->
+                    <!--android:textSize="40dp"-->
+                    <!--android:id="@+id/textView2"-->
+                    <!--android:layout_below="@+id/textView4"-->
+                    <!--android:layout_alignEnd="@+id/textView3" />-->
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -84,74 +84,75 @@
                 android:layout_below="@+id/editText2"
                 android:layout_alignParentStart="true" />
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_below="@+id/textView2"
-                    android:layout_alignEnd="@+id/textView2">
+                <!--<RelativeLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_below="@+id/textView2"-->
+                    <!--android:layout_alignEnd="@+id/textView2">-->
 
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="CLOTHES"
-                        android:id="@+id/checkBox"
-                        android:checked="false"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentStart="true" />
+                    <!--<CheckBox-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:text="CLOTHES"-->
+                        <!--android:id="@+id/checkBox"-->
+                        <!--android:checked="false"-->
+                        <!--android:layout_alignParentTop="true"-->
+                        <!--android:layout_alignParentStart="true" />-->
 
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="HEALTH"
-                        android:id="@+id/checkBox5"
-                        android:checked="false"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignStart="@+id/checkBox6" />
+                    <!--<CheckBox-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:text="HEALTH"-->
+                        <!--android:id="@+id/checkBox5"-->
+                        <!--android:checked="false"-->
+                        <!--android:layout_alignParentTop="true"-->
+                        <!--android:layout_alignStart="@+id/checkBox6" />-->
 
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="EDUCATION"
-                        android:id="@+id/checkBox6"
-                        android:checked="false"
-                        android:layout_below="@+id/checkBox5"
-                        android:layout_alignParentEnd="true" />
+                    <!--<CheckBox-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:text="EDUCATION"-->
+                        <!--android:id="@+id/checkBox6"-->
+                        <!--android:checked="false"-->
+                        <!--android:layout_below="@+id/checkBox5"-->
+                        <!--android:layout_alignParentEnd="true" />-->
 
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="FOODS"
-                        android:id="@+id/checkBox2"
-                        android:checked="false"
-                        android:layout_below="@+id/checkBox5"
-                        android:layout_alignStart="@+id/checkBox" />
+                    <!--<CheckBox-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:text="FOODS"-->
+                        <!--android:id="@+id/checkBox2"-->
+                        <!--android:checked="false"-->
+                        <!--android:layout_below="@+id/checkBox5"-->
+                        <!--android:layout_alignStart="@+id/checkBox" />-->
 
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="MONEY "
-                        android:id="@+id/checkBox4"
-                        android:checked="false"
-                        android:layout_below="@+id/checkBox6" />
+                    <!--<CheckBox-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:text="MONEY "-->
+                        <!--android:id="@+id/checkBox4"-->
+                        <!--android:checked="false"-->
+                        <!--android:layout_below="@+id/checkBox6" />-->
 
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="HOUSING"
-                        android:id="@+id/checkBox7"
-                        android:checked="false"
-                        android:layout_below="@+id/checkBox6"
-                        android:layout_alignStart="@+id/checkBox6" />
+                    <!--<CheckBox-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:text="HOUSING"-->
+                        <!--android:id="@+id/checkBox7"-->
+                        <!--android:checked="false"-->
+                        <!--android:layout_below="@+id/checkBox6"-->
+                        <!--android:layout_alignStart="@+id/checkBox6" />-->
 
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="SUBMIT"
                         android:id="@+id/button"
-                        android:layout_below="@+id/checkBox7"
-                        android:layout_centerHorizontal="true" />
+                        android:layout_below="@+id/editText"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginTop="36dp" />
 
-                </RelativeLayout>
+                <!--</RelativeLayout>-->
 
                 <ImageView
                     android:layout_width="wrap_content"
