--- a/app/src/main/res/layout/content_refugee__profile.xml
+++ b/app/src/main/res/layout/content_refugee__profile.xml
@@ -149,8 +149,8 @@
                         android:text="SUBMIT"
                         android:id="@+id/button"
                         android:layout_below="@+id/editText"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginTop="36dp" />
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="10dp" />
 
                 <!--</RelativeLayout>-->
 
