--- a/app/src/main/res/layout/connect_tab.xml
+++ b/app/src/main/res/layout/connect_tab.xml
@@ -8,8 +8,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/list_view"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentStart="true"
+            android:layout_above="@+id/story_button"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="See my story"
+        android:id="@+id/story_button"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
 
 
 </RelativeLayout>
